src/test/resources/org/nest/nestml/_cocos/invalid/assignmentToParameter.nestml
neuron A:
  parameters:
    parameterVar ms = 20 ms
  end

  update:
    parameterVar = 60 ms
  end

end
